# 0ai-assurance-network

./: .flake8  .gitignore  CODEOWNERS  CONTRIBUTING.md  IMPLEMENTATION_CYCLE_20260425-001_COMPLETE.md  LICENSE  Makefile  OWNERSHIP.md  PRODUCTION_DEPLOYMENT_REPORT.md  README.md  SECURITY.md  SUPPORT.md  go.mod  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
cmd/0aid/: main.go  main_test.go
config/: network-topology.json
config/genesis/: base-genesis.json  genesis.template.yaml
config/governance/: checkpoint-signers.json  funding-config.json  inference-policy.json  routing-policy.json  threat-detection-policy.json
docs/: appchain-hardening-roadmap.md  funding-deployment.md  governance-inference.md  identity-foundation.md  index.html  legal-questions.md  model-routing.md  module-milestone-1.md  orchestration-artifacts.md  peachtree-recursive-learning-test.md  security-assumptions.md  signer-manifests.md  testnet-operations.md  threat-detection.md  threat-model.md  token-disclosure.md  validator-genesis-scaffolding.md
scripts/: check_configs.py  deploy_funding.py  extract_governance_dataset.py  peachfuzz_governance.py  peachtrace.py  render_localnet.py  validate_peachtree_recursive_learning.py
tests/: production_stress_test.sh  smoke_test.sh  stress_test_governance.py  test_assurancectl.py  test_canva_connector.py  test_funding_deployment.py  test_github_connector.py  test_github_mcp.py  test_github_mcp_pull_requests.py  test_github_mcp_reactions.py  test_launch_control_pack.py  test_peachtree_recursive_learning_validator.py
(+57 files in other folders)
